Updated display to wrap long character strings.

--- a/style.css
+++ b/style.css
@@ -88,7 +88,13 @@ header {
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
-    font-size: 6.5vmax;
+    font-size: 5.5vmax;
+    word-break: break-all;
+    text-size-adjust: auto;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 1em;
+    max-height: 2em;
 }
 
 .buttons {
